--- a/codes/tests/Test_Packages.ipynb
+++ b/codes/tests/Test_Packages.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -79,12 +79,13 @@
        "       'Deals', 'was', 'the', 'problem.'], dtype='<U12')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Test to see if the data is loaded.\n",
     "dataset"
    ]
   },
