Adding TODOs for TF

--- a/codes/jupyterlabs/day1/01.Basic_TF_Tensorboard.ipynb
+++ b/codes/jupyterlabs/day1/01.Basic_TF_Tensorboard.ipynb
@@ -12,7 +12,11 @@
     "2. tf.summary.scalar: e.g., record how the learning rate varies over time, and how the objective function is changing.\n",
     "3. tf.summary.histogram: e.g.,  visualize the distributions of activations coming off a particular layer, or the distribution of gradients or weights.\n",
     "4. tf.summary.merge_all: to combine all summaries into a single op that generates all the summary data.\n",
-    "5. tf.summary.FileWriter: write this summary data to disk."
+    "5. tf.summary.FileWriter: write this summary data to disk.\n",
+    "\n",
+    "## There are some TODOs in this Notebook:\n",
+    "- TODO#1: (as always) read the codes and comments from begining to the end.\n",
+    "- TODO#2: change the computational graph to have one more operation: op4 = op1 + op2 + op3\n"
    ]
   },
   {
@@ -407,6 +411,23 @@
    "source": [
     "# !tensorboard --logdir=$logs_path_2 --port 8890\n",
     "show_graph(tf.get_default_graph().as_graph_def())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TODOs:\n",
+    "- Add one more operation to the computational graph: op4 = op1 + op2 + op3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO HERE"
    ]
   },
   {
