Comment out embeddings - large files

--- a/codes/jupyterlabs/day1/04.ETNLP.ipynb
+++ b/codes/jupyterlabs/day1/04.ETNLP.ipynb
@@ -7,7 +7,7 @@
     "# ETNLP: exploring different word embeddings\n",
     "Given many word embedding models, how do you know which one to use? Is it possible to have preliminary evaluations to predict which models to use for a certain downstream task? ETNLP will be a convenient tool for this purpose.\n",
     "\n",
-    "- Readmore in this paper: https://arxiv.org/abs/1903.04433\n",
+    "- Readmore in this paper: https://arxiv.org/abs/1903.04433 of Xuan-Son Vu, Thanh Vu, Son N. Tran, Lili Jiang.\n",
     "\n",
     "## There are some TODOs in this Notebook:\n",
     "- TODO#1: (as always) read the codes and comments from begining to the end.\n",
@@ -281,30 +281,31 @@
     "from etnlp_api import embedding_config\n",
     "from etnlp_api import embedding_extractor\n",
     "\n",
+    "# You don't need to run this part, just for demonstration the whole process.\n",
+    "def do_extraction():\n",
+    "    emb1 = \"/mnt/data/PretrainedEmbeddings/EN/NER_fasttext_wiki_subword.vec\"\n",
+    "    emb2 = \"/mnt/data/PretrainedEmbeddings/EN/NER_fasttext_wiki.vec\"\n",
+    "    emb3 = \"/mnt/data/PretrainedEmbeddings/EN/NER_glove.840B.300d.vec\"\n",
+    "    emb4 = \"/mnt/data/PretrainedEmbeddings/EN/NER_W2V_google_news.vec\"\n",
+    "    C2V = None\n",
+    "    out1 = \"../../../data/etnlp/Tiny_fasttext_wiki_subword.vec\"\n",
+    "    out2 = \"../../../data/etnlp/Tiny_fasttext_wiki.vec\"\n",
+    "    out3 = \"../../../data/etnlp/Tiny_glove.840B.300d.vec\"\n",
+    "    out4 = \"../../../data/etnlp/Tiny_W2V_google_news.vec\"\n",
     "\n",
-    "emb1 = \"/mnt/data/PretrainedEmbeddings/EN/NER_fasttext_wiki_subword.vec\"\n",
-    "emb2 = \"/mnt/data/PretrainedEmbeddings/EN/NER_fasttext_wiki.vec\"\n",
-    "emb3 = \"/mnt/data/PretrainedEmbeddings/EN/NER_glove.840B.300d.vec\"\n",
-    "emb4 = \"/mnt/data/PretrainedEmbeddings/EN/NER_W2V_google_news.vec\"\n",
-    "C2V = None\n",
-    "out1 = \"../../../data/etnlp/Tiny_fasttext_wiki_subword.vec\"\n",
-    "out2 = \"../../../data/etnlp/Tiny_fasttext_wiki.vec\"\n",
-    "out3 = \"../../../data/etnlp/Tiny_glove.840B.300d.vec\"\n",
-    "out4 = \"../../../data/etnlp/Tiny_W2V_google_news.vec\"\n",
+    "    VOCAB_FILE = vocab_file\n",
+    "    # OUTPUT_FORMAT=\".txt;.npz;.gz\"\n",
+    "    OUTPUT_FORMAT = \".txt\"\n",
+    "    # embedding_config\n",
+    "    embedding_config.do_normalize_emb = False\n",
     "\n",
-    "VOCAB_FILE = vocab_file\n",
-    "# OUTPUT_FORMAT=\".txt;.npz;.gz\"\n",
-    "OUTPUT_FORMAT = \".txt\"\n",
-    "# embedding_config\n",
-    "embedding_config.do_normalize_emb = False\n",
+    "    emb_files = [emb1, emb2, emb3, emb4]\n",
+    "    out_files = [out1, out2, out3, out4]\n",
     "\n",
-    "emb_files = [emb1, emb2, emb3, emb4]\n",
-    "out_files = [out1, out2, out3, out4]\n",
-    "\n",
-    "for emb_file, out_file in zip(emb_files, out_files):\n",
-    "    embedding_extractor.extract_embedding_for_vocab_file(emb_file, VOCAB_FILE,\n",
-    "                                                     C2V, out_file, OUTPUT_FORMAT)\n",
-    "print(\"DONE\")"
+    "    for emb_file, out_file in zip(emb_files, out_files):\n",
+    "        embedding_extractor.extract_embedding_for_vocab_file(emb_file, VOCAB_FILE,\n",
+    "                                                         C2V, out_file, OUTPUT_FORMAT)\n",
+    "    print(\"DONE\")"
    ]
   },
   {
@@ -316,15 +317,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/mnt/data/OProjects/DeepLearning/HPC2N/TFnDeepLearning/codes/jupyterlabs/day1\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "conll2003_ner_vocab.txt  Ti_ft_wi_sub.vec  Ti_gl.vec\n",
+      "senti_vocab.txt\t\t Ti_ft_wi.vec\t   Ti_W2V.vec\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls \"../../../data/etnlp/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# from etnlp_api import embedding_visualizer\n",
-    "out1 = \"../../../data/etnlp/Tiny_fasttext_wiki_subword.vec\"\n",
-    "out2 = \"../../../data/etnlp/Tiny_fasttext_wiki.vec\"\n",
-    "out3 = \"../../../data/etnlp/Tiny_glove.840B.300d.vec\"\n",
-    "out4 = \"../../../data/etnlp/Tiny_W2V_google_news.vec\"\n",
+    "out1 = \"../../../data/etnlp/Ti_ft_wi_sub.vec\"\n",
+    "out2 = \"../../../data/etnlp/Ti_ft_wi.vec\"\n",
+    "out3 = \"../../../data/etnlp/Ti_gl.vec\"\n",
+    "out4 = \"../../../data/etnlp/Ti_W2V.vec\"\n",
     "\n",
     "INPUT_FILES = \"%s;%s;%s;%s\"%(out1, out2, out3, out4)\n",
     "\n",
@@ -381,6 +417,20 @@
     "\"\"\"\n",
     "\n",
     "# Next: please replicate the whole process again with this new text."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "in1 = \"../../../data/etnlp/Ti_ft_wi_sub.vec\"\n",
+    "in2 = \"../../../data/etnlp/Ti_ft_wi.vec\"\n",
+    "in3 = \"../../../data/etnlp/Ti_gl.vec\"\n",
+    "in4 = \"../../../data/etnlp/Ti_W2V.vec\"\n",
+    "\n",
+    "# TODO HERE: the same with the do_extraction() function but with the above 4 in_embeddings."
    ]
   },
   {
