--- a/codes/jupyterlabs/day2/02.Sentiment_BERT.ipynb
+++ b/codes/jupyterlabs/day2/02.Sentiment_BERT.ipynb
@@ -230,6 +230,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_input_fn = run_classifier.input_fn_builder(\n",
+    "                        features=test_features,\n",
+    "                        seq_length=max_seq_length,\n",
+    "                        is_training=False,\n",
+    "                        drop_remainder=True)\n",
+    "\n",
+    "for item in tpu_est.predict(input_fn=input_fn):\n",
+    "    print(item)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
