fix issues with encoding issues in windows

--- a/codes/jupyterlabs/day2/01.Sentiment_ELMO.ipynb
+++ b/codes/jupyterlabs/day2/01.Sentiment_ELMO.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,15 +59,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/home/sonvx/anaconda2/envs/ipykernel_py3_ml/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
       "WARNING: Logging before flag parsing goes to stderr.\n",
-      "W0509 00:01:02.011122 140428235376448 __init__.py:56] Some hub symbols are not available because TensorFlow version is less than 1.14\n"
+      "W0509 11:30:23.909618 140286712473344 __init__.py:56] Some hub symbols are not available because TensorFlow version is less than 1.14\n"
      ]
     }
    ],
@@ -92,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,20 +110,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['i am very sorry that this charming and whimsical film which i first saw soon after it was first released in the early fifties has had such a poor reception more recently in my opinion it has been greatly underrated  but perhaps it appeals more to the european sense of humour than to for example the american maybe we in europe can understand and appreciate its subtleties and situations more since we are closer to some of them in real life particular mention should be made of the limited but good music  especially the catchy and memorable song']\n",
-      " ['xizao is a rare little movie it is simple and undemanding and at the same time so rewarding in emotion and joy the story is simple and the theme of old and new clashing is wonderfully introduced in the first scenes this theme is the essence of the movie but it would have fallen flat if it was not for the magnificent characters and the actors portraying themthe aging patriarch master liu is a relic of chinas preexpansion days he runs a bath house in an old neighbourhood every single scene set in the bath house is a source of']\n",
-      " ['the godfather citizen kane star wars goodfellas none of the above compare to the complex brilliance of the sopranos each and every character has layers upon layers of absolute verity completely and utterly three dimensional we care about tony soprano wholeheartedly despite the fact that in the simplest model of good vs evil he is evil soprano is the most provocative intricate and fascinating protagonist ever created to this point in history if you are in the mood to be overtly challenged as a viewer and to be forever altered on your feelings toward entertainment watch the sopranos i defy']\n",
+      "[['my father was the warden of the prison he is retired now showcased in this documentary and i have grown up around the prison life so perhaps my views will be totally different from everyone else who watches this movie i will say this the filmmakers who brought us this 93minute miracle are fantastic artists and even better people they were brave enough to a show up and tell this story b get inside these inmates minds and hearts and c do all of this responsibly responsible to their art and more importantly responsible to the inmates and staff of']\n",
+      " ['james j corbett heavyweight champion of the world from 1892 to 1897 turned out to be errol flynns favorite role possibly because he did not have to wield a sword or be in a western he grew tired of the swashbucklers and he said in his autobiography that he felt he was miscast in westerns and could not understand why people liked him in them it is an enjoyable film but hardly does tell the real story of james j corbettas portrayed corbett was the first scientific boxer to win in the heavyweight division a man who used brains and']\n",
+      " ['this is a really nice and sweet movie that the entire family can enjoy its about two dogs and a cat who are taken away to live with someone else for a little while but the animals do not understand and they escape and go to find the family on their own the cat is named sassy and she lives up to her name chance is the younger dog who knows a lot about life on the inside of the pound shadow is the older and wiser dog who senses things put those three together on an adventure and it']\n",
       " ...\n",
-      " ['i guess i have still enough brain left to not find this movie funny great comedians  but a very poor movie the best performance still did nina hagen trivia did you realize that it the real world scenes in hamburg the cars are almost only new bmws  i guess i have still enough brain left to not find this movie funny great comedians  but a very poor movie the best performance still did nina hagen trivia did you realize that it the real world scenes in hamburg the cars are almost only new bmws ']\n",
-      " ['this kind of inspirational saccharine is enough to make you sick it telegraphs its sentiments like the biggest semaphore on earth it removes from the audience its own interpretation and feeling by making the choices for it the big finish is swimming in weeping orchestration that must supposed to work like jumper cables on a dead car i guess you would need such prompting to feel if you are stupid enough to watch a film as simpleminded and sappy as this streep glows and you wonder if she really has the depth of feeling on display or if its just']\n",
-      " ['please spare me of these movies that teach us that crime is fun and justified couple that with a vacuous script with an intense desire to be a farrelly or a coen brother plus the lives of yet another group of supposedly high school age people acting out their dawson creekbrand teen angst complete with a genxyz soundtrack that woefully tries to make the movie feel cool and we have intensely and painfully inept satirethis is not even watereddown ferris buelleri would rather watch a traffic light changeonly one scene stands out as anywhere near worth the price of admission']]\n"
+      " ['occasionally one is served a new entre from foreign films that is their great attraction they take from life and serve it up raw american films rarely dare to touch the forbidden subjects of society too many hangups and a morbid fear of financial failure the almighty dollar determines their selections something which invites european directors in addition audiences world wide remain hungry for different films especially those which offer a savory bite out of the wretched suffering body of humanity despite the fear of directors or producers many audiences yearn for beauty poetry and the pristine flavor of life']\n",
+      " ['if you appreciate the renaissance in asian horror do not bother with gawi the film scarcely deserves mention alongside alist work such as ringu a tale of two sisters cure and juon or even such good material as the eye or inner senses those films brim with subtleties unexpected imagery rich characters and a decidedly nonwestern take on whats frightening gawi is strung together with the leftover limbs and organs of everything that has made american horror lousy for the past twentyfive yearsthe film tries to blend asian ghost story and hollywood slasher flick but its a bad fit one']\n",
+      " ['i agree with the previous comment the beginning of the movie is quite good and gets you wandering about what is to come which is nothing all open story lines remain open two characters who at first seemed like they might be of some importance are completely left out of the picture save for 1 or 2 very short scenes i wander if ilya would not have done better to just completely leave them out as for the one remaining character nothing is done with her either she just visits some godawful place and suddenly the movie is not about']]\n"
      ]
     }
    ],
@@ -145,19 +147,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "W0509 00:01:07.748224 140428235376448 deprecation.py:323] From /home/michele/Development/anaconda3/lib/python3.7/site-packages/tensorflow/python/ops/control_flow_ops.py:3632: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Colocations handled automatically by placer.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "batch_size = 1\n",
     "\n",
@@ -182,13 +174,28 @@
     "    \n",
     "# Set load = False to generate the embeddings with ELMO. It takes a lot of time.  \n",
     "# Set load = True to load a pre-precessed dataset (given) from the hard-disk.\n",
-    "embs = transform_imdb_dataset(sess, input_text, elmo, x, batch_size, load=True, npy_path='./imdb_embs.npy')\n",
-    "\n",
-    "\n",
+    "embs = transform_imdb_dataset(sess, input_text, elmo, x, batch_size, load=True, npy_path='./imdb_embs.npy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Temporary solution: just in case issues with Windows.\n",
+    "embs = embs[:len(x)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "assert len(embs) == len(x) == len(y)\n",
     "\n",
     "# embs, x and y are row-aligned\n",
-    "\n",
     "\n",
     "perc_train = .8\n",
     "\n",
@@ -207,13 +214,6 @@
     "train_embed, train_labels, train_values = embs[:row_split, :], y[:row_split], x[:row_split, :]\n",
     "test_embed, test_labels, test_values    = embs[row_split:, :], y[row_split:], x[row_split:, :]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
